--- a/styles/style.css
+++ b/styles/style.css
@@ -244,6 +244,48 @@ padding: 5px 15px;
   opacity: 1;
   transform: translate(-50%, -200%);
 }
+#difficulty-container {
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 15px 20px;
+  width: 80%;
+  text-align: center;
+  border-radius: 10px;
+  color: white;
+  font-family: "Arial Black", Impact, sans-serif;
+  margin-bottom: 20px;
+  box-shadow: 3px 3px 0px #f1c40f, 5px 5px 0px #000;
+}
+
+.difficulty-option {
+  margin: 5px;
+  padding: 2px 5px;
+  font-size: 0.8em;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  background-color: #f1c40f;
+  color: black;
+  border: 4px solid black;
+  border-radius: 8px;
+  font-family: "Arial Black", Impact, sans-serif;
+  box-shadow: 5px 5px 0px #e74c3c 8px 8px 0px #000000;
+  transition: 100ms;
+}
+
+.difficulty-option:hover {
+  background-color: #f1c40f;
+  box-shadow: 3px 3px 0px #c0392b, 5px 5px 0px black;
+}
+
+.difficulty-option input {
+  transform: scale(1.3);
+  margin-right: 10px;
+}
+
+.difficulty-option span {
+  font-size: 0.8em;
+  opacity: 0.8;
+}
 
 
 @keyframes explode {
